<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth_add_pwd_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lighterGray"
    android:orientation="vertical">



    <LinearLayout style="@style/FrameLayoutWhite">

        <com.lncosie.ilandroidos.view.LanguageTextView
            style="@style/W2HeaderText"
            android:text="@string/password" />

        <include layout="@layout/v_seperator" />

        <EditText
            android:id="@+id/password"
            style="@style/FixLengthInputPassword"
            android:hint="@string/password_input" />

    </LinearLayout>

    <LinearLayout style="@style/FrameLayoutWhite">

        <com.lncosie.ilandroidos.view.LanguageTextView
            style="@style/W2HeaderText"
            android:text="@string/password_re" />

        <include layout="@layout/v_seperator" />

        <EditText
            android:id="@+id/password_re"
            style="@style/FixLengthInputPassword"
            android:hint="@string/password_input_re" />

    </LinearLayout>

</LinearLayout>