<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGray"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="@dimen/preference_height"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:onClick="backward"
            android:src="@drawable/back"
            android:paddingLeft="@dimen/padding_normal"
            android:layout_width="@dimen/icon_with_click_padding"
            android:layout_height="match_parent" />
        <com.lncosie.ilandroidos.view.LanguageTextView
            android:text="@string/modify_password"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/PreferencePageTitle"
            />
        <com.lncosie.ilandroidos.view.LanguageTextView
            android:id="@+id/save"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_myplaces"
            android:paddingRight="@dimen/padding_normal"
            android:text="@string/save"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        style="@style/FrameLayoutWhite">
        <com.lncosie.ilandroidos.view.LanguageTextView
            android:text="@string/password"
            style="@style/W2HeaderText"/>
        <include layout="@layout/v_seperator"></include>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_input"
            style="@style/FixLengthInputPassword">
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <LinearLayout
        style="@style/FrameLayoutWhite">

        <com.lncosie.ilandroidos.view.LanguageTextView
            android:text="@string/password_re"
            style="@style/W2HeaderText"
            />
       <include layout="@layout/v_seperator"></include>
        <EditText
            android:id="@+id/password_re"
            android:hint="@string/password_input_re"
            style="@style/FixLengthInputPassword" />

    </LinearLayout>

</LinearLayout>
