<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/preference_height"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lighterGray"
    android:paddingBottom="@dimen/padding_small"
    tools:context="com.lncosie.ilandroidos.view.MenuAuthFragment">
    <include layout="@layout/window_head"></include>
    <com.lncosie.ilandroidos.view.LanguageTextView
        android:id="@+id/menu_item_view"
        android:text="@string/menu_item_view"
        style="@style/FrameLayoutMenu"
        />
    <com.lncosie.ilandroidos.view.LanguageTextView
        android:id="@+id/menu_item_log"
        android:text="@string/menu_item_log"
        style="@style/FrameLayoutMenu"
        />
    <com.lncosie.ilandroidos.view.LanguageTextView
        android:id="@+id/menu_item_delete_user"
        android:text="@string/menu_item_delete_user"
        style="@style/FrameLayoutMenu"
        />
</LinearLayout>
