<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="@dimen/preference_height"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            >
            <ImageView
                android:onClick="backward"
                android:src="@drawable/back"
                android:paddingLeft="@dimen/padding_normal"
                android:layout_width="@dimen/icon_with_click_padding"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/about_us"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/PreferencePageTitle"
                />
            <ImageView
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="@dimen/icon_size"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@drawable/htl_logo" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/about_us_content"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="@dimen/text_master" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="@string/contact_us_address_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_master" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:autoLink="map"
                    android:text="@string/contact_us_address_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_master" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact_us_tel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us_tel_0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_master" />

                    <TextView
                        android:id="@+id/contact_us_tel_tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="@string/contact_us_tel_1"
                        android:textSize="@dimen/text_master" />
                </LinearLayout>

                <TextView
                    android:id="@+id/contact_us_tel_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/ll"
                    android:layout_below="@id/ll"
                    android:layout_marginTop="2dp"
                    android:autoLink="phone"
                    android:text="@string/contact_us_tel_2"
                    android:textSize="@dimen/text_master" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/officalweb0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_official_web1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_master" />

                <TextView
                    android:id="@+id/officalweb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/contact_us_official_web2"
                    android:textSize="@dimen/text_master" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
