<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.lncosie.ilandroidos.view.DeviceSelectorFragment">
    <include layout="@layout/window_head"></include>
    <TextView
        android:paddingLeft="@dimen/padding_normal"
        android:id="@+id/tip"
        android:text="@string/reset_password_tip"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="14sp"
        style="@style/TextAppearance.AppCompat.Display1"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:hint="@string/password_input"
        android:textSize="@dimen/text_detail"
        style="@style/InputPassword" />
    <LinearLayout
        android:orientation="horizontal"
        style="@style/FrameLayoutWhite"
        android:gravity="right|center_vertical"
        >
        <TextView
            android:gravity="center"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_width="@dimen/item_height"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/clickable_frame"
            android:layout_marginRight="@dimen/padding_normal"
            />
        <TextView
            android:gravity="center"
            android:id="@+id/ok"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:layout_width="@dimen/item_height"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/clickable_frame"
            android:layout_marginRight="@dimen/padding_normal"/>
    </LinearLayout>
</LinearLayout>
