<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <RadioButton
                android:id="@+id/page_home"
                style="@style/NagativeButton"
                android:checked="true"
                android:drawableTop="@drawable/switch_home"
                android:onClick="clickNegative"
                android:tag="0"
                android:text="@string/home"
                android:textColor="@color/colorActiveText" />

            <RadioButton
                android:id="@+id/page_users"
                style="@style/NagativeButton"
                android:drawableTop="@drawable/switch_users"
                android:onClick="clickNegative"
                android:tag="1"
                android:text="@string/users" />

            <RadioButton
                android:id="@+id/page_history"
                style="@style/NagativeButton"
                android:drawableTop="@drawable/switch_history"
                android:onClick="clickNegative"
                android:tag="2"
                android:text="@string/history" />

            <RadioButton
                android:id="@+id/page_setting"
                style="@style/NagativeButton"
                android:drawableTop="@drawable/switch_setting"
                android:onClick="clickNegative"
                android:tag="3"
                android:text="@string/setting" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
