<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/preference_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_with_click_padding"
            android:layout_height="match_parent"
            android:onClick="backward"
            android:paddingLeft="@dimen/padding_normal"
            android:src="@drawable/back" />
        <TextView
            android:id="@+id/title"
            style="@style/PreferencePageTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/pattern_check_title" />
        <ImageView
            android:layout_width="@dimen/icon_with_click_padding"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_normal"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/todo"
        android:paddingTop="@dimen/item_height_small"
        android:paddingBottom="@dimen/item_height_small"
        android:text="@string/stub"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.takwolf.android.lock9.Lock9View
        android:id="@+id/lock_9_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        app:lock9_nodeSrc="@drawable/node_normal"
        app:lock9_nodeOnSrc="@drawable/node_active"
        app:lock9_nodeOnAnim="@anim/node_on_2"
        app:lock9_nodeSize="32dp"
        app:lock9_nodeAreaExpand="32dp"
        app:lock9_lineColor="@color/blue_light"
        app:lock9_lineWidth="4dp"
        app:lock9_autoLink="true"
        app:lock9_vibrateTime="20" />
    <!--app:lock9_enableVibrate="true"-->
    <TextView
        android:id="@+id/clear"
        android:padding="8dp"
        android:layout_marginRight="48dp"
        android:text="@string/pattern_clear"
        android:gravity="right"
        android:textSize="16sp"
        android:visibility="invisible"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>